--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Puddles and Cuddles
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>MunnaSearch - The number Search of every Munna</title>
+</head>
+<body>
+  Hey hey!
+</body>
+</html>
