--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>MunnaSearch - The number Search of every Munna</title>
 </head>
 <body>
-  Hey hey!
+  <h1>Trying to add something for it to hopefully work</h1>
 </body>
 </html>
