--- a/index.html
+++ b/index.html
@@ -5,6 +5,281 @@
   <title>MunnaSearch - The number Search of every Munna</title>
 </head>
 <body>
-  Hey hey!
+  <div class="info-group info-selectors">
+    <div class="gen-specific g3 g4 g5 g6">
+        <label>Nature</label>
+        <select class="nature calc-trigger">
+            <option value="Adamant">Adamant</option>
+            <option value="Bashful">Bashful</option>
+            <option value="Bold">Bold</option>
+            <option value="Brave">Brave</option>
+            <option value="Calm">Calm</option>
+            <option value="Careful">Careful</option>
+            <option value="Docile">Docile</option>
+            <option value="Gentle">Gentle</option>
+            <option value="Hardy" selected="selected">Hardy</option>
+            <option value="Hasty">Hasty</option>
+            <option value="Impish">Impish</option>
+            <option value="Jolly">Jolly</option>
+            <option value="Lax">Lax</option>
+            <option value="Lonely">Lonely</option>
+            <option value="Mild">Mild</option>
+            <option value="Modest">Modest</option>
+            <option value="Naive">Naive</option>
+            <option value="Naughty">Naughty</option>
+            <option value="Quiet">Quiet</option>
+            <option value="Quirky">Quirky</option>
+            <option value="Rash">Rash</option>
+            <option value="Relaxed">Relaxed</option>
+            <option value="Sassy">Sassy</option>
+            <option value="Serious">Serious</option>
+            <option value="Timid">Timid</option>
+        </select>
+    </div>
+    <div class="gen-specific g3 g4 g5 g6">
+        <label>Ability</label>
+        <select class="ability calc-trigger">
+            <option value="">(other)</option>
+            <option value="Adaptability">Adaptability</option>
+            <option value="Aerilate">Aerilate</option>
+            <option value="Air Lock">Air Lock</option>
+            <option value="Analytic">Analytic</option>
+            <option value="Aura Break">Aura Break</option>
+            <option value="Bad Dreams">Bad Dreams</option>
+            <option value="Battle Armor">Battle Armor</option>
+            <option value="Blaze">Blaze</option>
+            <option value="Bulletproof">Bulletproof</option>
+            <option value="Chlorophyll">Chlorophyll</option>
+            <option value="Clear Body">Clear Body</option>
+            <option value="Cloud Nine">Cloud Nine</option>
+            <option value="Contrary">Contrary</option>
+            <option value="Dark Aura">Dark Aura</option>
+            <option value="Defeatist">Defeatist</option>
+            <option value="Defiant">Defiant</option>
+            <option value="Download">Download</option>
+            <option value="Drizzle">Drizzle</option>
+            <option value="Drought">Drought</option>
+            <option value="Dry Skin">Dry Skin</option>
+            <option value="Fairy Aura">Fairy Aura</option>
+            <option value="Filter">Filter</option>
+            <option value="Flare Boost">Flare Boost</option>
+            <option value="Flash Fire">Flash Fire</option>
+            <option value="Flash Fire (activated)">Flash Fire (activated)</option>
+            <option value="Flower Gift">Flower Gift</option>
+            <option value="Forecast">Forecast</option>
+            <option value="Fur Coat">Fur Coat</option>
+            <option value="Guts">Guts</option>
+            <option value="Heatproof">Heatproof</option>
+            <option value="Huge Power">Huge Power</option>
+            <option value="Hustle">Hustle</option>
+            <option value="Hyper Cutter">Hyper Cutter</option>
+            <option value="Ice Body">Ice Body</option>
+            <option value="Infiltrator">Infiltrator</option>
+            <option value="Intimidate">Intimidate</option>
+            <option value="Iron Fist">Iron Fist</option>
+            <option value="Klutz">Klutz</option>
+            <option value="Levitate">Levitate</option>
+            <option value="Lightning Rod">Lightning Rod</option>
+            <option value="Magic Guard">Magic Guard</option>
+            <option value="Marvel Scale">Marvel Scale</option>
+            <option value="Mega Launcher">Mega Launcher</option>
+            <option value="Mold Breaker">Mold Breaker</option>
+            <option value="Motor Drive">Motor Drive</option>
+            <option value="Multiscale">Multiscale</option>
+            <option value="Normalize">Normalize</option>
+            <option value="Overcoat">Overcoat</option>
+            <option value="Overgrow">Overgrow</option>
+            <option value="Parental Bond">Parental Bond</option>
+            <option value="Pixilate">Pixilate</option>
+            <option value="Poison Heal">Poison Heal</option>
+            <option value="Protean">Protean</option>
+            <option value="Pure Power">Pure Power</option>
+            <option value="Rain Dish">Rain Dish</option>
+            <option value="Reckless">Reckless</option>
+            <option value="Refrigerate">Refrigerate</option>
+            <option value="Sand Force">Sand Force</option>
+            <option value="Sand Rush">Sand Rush</option>
+            <option value="Sand Stream">Sand Stream</option>
+            <option value="Sand Veil">Sand Veil</option>
+            <option value="Sap Sipper">Sap Sipper</option>
+            <option value="Scrappy">Scrappy</option>
+            <option value="Sheer Force">Sheer Force</option>
+            <option value="Shell Armor">Shell Armor</option>
+            <option value="Simple">Simple</option>
+            <option value="Skill Link">Skill Link</option>
+            <option value="Slow Start">Slow Start</option>
+            <option value="Sniper">Sniper</option>
+            <option value="Snow Cloak">Snow Cloak</option>
+            <option value="Snow Warning">Snow Warning</option>
+            <option value="Solar Power">Solar Power</option>
+            <option value="Solid Rock">Solid Rock</option>
+            <option value="Soundproof">Soundproof</option>
+            <option value="Storm Drain">Storm Drain</option>
+            <option value="Strong Jaw">Strong Jaw</option>
+            <option value="Swarm">Swarm</option>
+            <option value="Swift Swim">Swift Swim</option>
+            <option value="Technician">Technician</option>
+            <option value="Teravolt">Teravolt</option>
+            <option value="Thick Fat">Thick Fat</option>
+            <option value="Tinted Lens">Tinted Lens</option>
+            <option value="Torrent">Torrent</option>
+            <option value="Tough Claws">Tough Claws</option>
+            <option value="Toxic Boost">Toxic Boost</option>
+            <option value="Turboblaze">Turboblaze</option>
+            <option value="Unaware">Unaware</option>
+            <option value="Unnerve">Unnerve</option>
+            <option value="Volt Absorb">Volt Absorb</option>
+            <option value="Water Absorb">Water Absorb</option>
+            <option value="White Smoke">White Smoke</option>
+            <option value="Wonder Guard">Wonder Guard</option>
+        </select>
+    </div>
+    <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Item</label>
+        <select class="item calc-trigger">
+            <option value="">(none)</option>
+            <option value="Adamant Orb">Adamant Orb</option>
+            <option value="Air Balloon">Air Balloon</option>
+            <option value="Apicot Berry">Apicot Berry</option>
+            <option value="Assault Vest">Assault Vest</option>
+            <option value="Babiri Berry">Babiri Berry</option>
+            <option value="Belue Berry">Belue Berry</option>
+            <option value="Berry Juice">Berry Juice</option>
+            <option value="Black Belt">Black Belt</option>
+            <option value="Black Glasses">Black Glasses</option>
+            <option value="Black Sludge">Black Sludge</option>
+            <option value="Charcoal">Charcoal</option>
+            <option value="Charti Berry">Charti Berry</option>
+            <option value="Chesto Berry">Chesto Berry</option>
+            <option value="Chilan Berry">Chilan Berry</option>
+            <option value="Choice Band">Choice Band</option>
+            <option value="Choice Scarf">Choice Scarf</option>
+            <option value="Choice Specs">Choice Specs</option>
+            <option value="Chople Berry">Chople Berry</option>
+            <option value="Coba Berry">Coba Berry</option>
+            <option value="Colbur Berry">Colbur Berry</option>
+            <option value="Custap Berry">Custap Berry</option>
+            <option value="Deep Sea Scale">Deep Sea Scale</option>
+            <option value="Deep Sea Tooth">Deep Sea Tooth</option>
+            <option value="Draco Plate">Draco Plate</option>
+            <option value="Dragon Fang">Dragon Fang</option>
+            <option value="Dread Plate">Dread Plate</option>
+            <option value="Durin Berry">Durin Berry</option>
+            <option value="Earth Plate">Earth Plate</option>
+            <option value="Enigma Berry">Enigma Berry</option>
+            <option value="Eviolite">Eviolite</option>
+            <option value="Expert Belt">Expert Belt</option>
+            <option value="Fist Plate">Fist Plate</option>
+            <option value="Flame Orb">Flame Orb</option>
+            <option value="Flame Plate">Flame Plate</option>
+            <option value="Ganlon Berry">Ganlon Berry</option>
+            <option value="Griseous Orb">Griseous Orb</option>
+            <option value="Haban Berry">Haban Berry</option>
+            <option value="Hard Stone">Hard Stone</option>
+            <option value="Icicle Plate">Icicle Plate</option>
+            <option value="Insect Plate">Insect Plate</option>
+            <option value="Iron Ball">Iron Ball</option>
+            <option value="Iron Plate">Iron Plate</option>
+            <option value="Jaboca Berry">Jaboca Berry</option>
+            <option value="Kasib Berry">Kasib Berry</option>
+            <option value="Kebia Berry">Kebia Berry</option>
+            <option value="Kee Berry">Kee Berry</option>
+            <option value="King's Rock">King's Rock</option>
+            <option value="Lagging Tail">Lagging Tail</option>
+            <option value="Lansat Berry">Lansat Berry</option>
+            <option value="Leftovers">Leftovers</option>
+            <option value="Leppa Berry">Leppa Berry</option>
+            <option value="Liechi Berry">Liechi Berry</option>
+            <option value="Life Orb">Life Orb</option>
+            <option value="Light Ball">Light Ball</option>
+            <option value="Lum Berry">Lum Berry</option>
+            <option value="Lustrous Orb">Lustrous Orb</option>
+            <option value="Macho Brace">Macho Brace</option>
+            <option value="Magnet">Magnet</option>
+            <option value="Maranga Berry">Maranga Berry</option>
+            <option value="Meadow Plate">Meadow Plate</option>
+            <option value="Metal Coat">Metal Coat</option>
+            <option value="Metal Powder">Metal Powder</option>
+            <option value="Micle Berry">Micle Berry</option>
+            <option value="Mind Plate">Mind Plate</option>
+            <option value="Miracle Seed">Miracle Seed</option>
+            <option value="Muscle Band">Muscle Band</option>
+            <option value="Mystic Water">Mystic Water</option>
+            <option value="Never-Melt Ice">Never-Melt Ice</option>
+            <option value="Normal Gem">Normal Gem</option>
+            <option value="Occa Berry">Occa Berry</option>
+            <option value="Odd Incense">Odd Incense</option>
+            <option value="Oran Berry">Oran Berry</option>
+            <option value="Passho Berry">Passho Berry</option>
+            <option value="Payapa Berry">Payapa Berry</option>
+            <option value="Petaya Berry">Petaya Berry</option>
+            <option value="Pixie Plate">Pixie Plate</option>
+            <option value="Poison Barb">Poison Barb</option>
+            <option value="Rawst Berry">Rawst Berry</option>
+            <option value="Razor Fang">Razor Fang</option>
+            <option value="Rindo Berry">Rindo Berry</option>
+            <option value="Rock Incense">Rock Incense</option>
+            <option value="Rose Incense">Rose Incense</option>
+            <option value="Roseli Berry">Roseli Berry</option>
+            <option value="Rowap Berry">Rowap Berry</option>
+            <option value="Safety Goggles">Safety Goggles</option>
+            <option value="Salac Berry">Salac Berry</option>
+            <option value="Sea Incense">Sea Incense</option>
+            <option value="Sharp Beak">Sharp Beak</option>
+            <option value="Shuca Berry">Shuca Berry</option>
+            <option value="Silk Scarf">Silk Scarf</option>
+            <option value="Silver Powder">Silver Powder</option>
+            <option value="Sitrus Berry">Sitrus Berry</option>
+            <option value="Sky Plate">Sky Plate</option>
+            <option value="Soft Sand">Soft Sand</option>
+            <option value="Spell Tag">Spell Tag</option>
+            <option value="Splash Plate">Splash Plate</option>
+            <option value="Spooky Plate">Spooky Plate</option>
+            <option value="Starf Berry">Starf Berry</option>
+            <option value="Stick">Stick</option>
+            <option value="Stone Plate">Stone Plate</option>
+            <option value="Tanga Berry">Tanga Berry</option>
+            <option value="Thick Club">Thick Club</option>
+            <option value="Toxic Orb">Toxic Orb</option>
+            <option value="Toxic Plate">Toxic Plate</option>
+            <option value="Twisted Spoon">Twisted Spoon</option>
+            <option value="Wacan Berry">Wacan Berry</option>
+            <option value="Watmel Berry">Watmel Berry</option>
+            <option value="Wave Incense">Wave Incense</option>
+            <option value="Wise Glasses">Wise Glasses</option>
+            <option value="Yache Berry">Yache Berry</option>
+            <option value="Zap Plate">Zap Plate</option>
+        </select>
+    </div>
+    <div>
+        <label>Status</label>
+        <select class="status calc-trigger">
+            <option value="Healthy">Healthy</option>
+            <option value="Poisoned">Poisoned</option>
+            <option value="Badly Poisoned">Badly Poisoned</option>
+            <option value="Burned">Burned</option>
+            <option value="Paralyzed">Paralyzed</option>
+            <option value="Asleep">Asleep</option>
+            <option value="Frozen">Frozen</option>
+        </select>
+        <select class="toxic-counter calc-trigger hide" style="display: none;">
+            <option value="1">1/16</option>
+            <option value="2">2/16</option>
+            <option value="3">3/16</option>
+            <option value="4">4/16</option>
+            <option value="5">5/16</option>
+            <option value="6">6/16</option>
+            <option value="7">7/16</option>
+            <option value="8">8/16</option>
+            <option value="9">9/16</option>
+            <option value="10">10/16</option>
+            <option value="11">11/16</option>
+            <option value="12">12/16</option>
+            <option value="13">13/16</option>
+            <option value="14">14/16</option>
+            <option value="15">15/16</option>
+        </select>
+    </div>
+</div>
 </body>
 </html>
