--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MunnaSearch - The number Search of every Munna</title>
+  <title>MunnaSearch</title>
 </head>
 <body>
+<input type="text" class="Pokemon">
   <div class="info-group info-selectors">
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
