--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>MunnaSearch</title>
 </head>
+<center>
 <body>
 <input type="text" class="Pokemon">
   <div class="info-group info-selectors">
@@ -283,4 +284,5 @@
     </div>
 </div>
 </body>
+</center>
 </html>
