--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </center>
     </div>
     <div class="gen-specific g3 g4 g5 g6">
+    <center>
         <label>Ability</label>
         <select class="ability calc-trigger">
             <option value="">(other)</option>
@@ -136,8 +137,10 @@
             <option value="White Smoke">White Smoke</option>
             <option value="Wonder Guard">Wonder Guard</option>
         </select>
+        </center>
     </div>
     <div class="gen-specific g2 g3 g4 g5 g6">
+    <center>
         <label>Item</label>
         <select class="item calc-trigger">
             <option value="">(none)</option>
@@ -253,8 +256,10 @@
             <option value="Yache Berry">Yache Berry</option>
             <option value="Zap Plate">Zap Plate</option>
         </select>
+        </center>
     </div>
     <div>
+    <center>
         <label>Status</label>
         <select class="status calc-trigger">
             <option value="Healthy">Healthy</option>
@@ -264,8 +269,10 @@
             <option value="Paralyzed">Paralyzed</option>
             <option value="Asleep">Asleep</option>
             <option value="Frozen">Frozen</option>
+        </center>
         </select>
         <select class="toxic-counter calc-trigger hide" style="display: none;">
+        <center>
             <option value="1">1/16</option>
             <option value="2">2/16</option>
             <option value="3">3/16</option>
@@ -282,6 +289,7 @@
             <option value="14">14/16</option>
             <option value="15">15/16</option>
         </select>
+        </center>
     </div>
 </div>
 </body>
