--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <center>
+<div class="result"></div>
 <input type="text" class="Pokemon">
   <div class="info-group info-selectors">
     <div class="gen-specific g3 g4 g5 g6">
