--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <div class="result"></div>
 <input type="text" class="Pokemon">
 <button>
-    width: 80px;
-    height: 80px;
-    </button>
+Cats
+</button>
   <div class="info-group info-selectors">
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
