--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 <center>
 <div class="result"></div>
 <input type="text" class="Pokemon">
+<br>
+<center>
 <button>
 Cats
 </button>
+</center>
   <div class="info-group info-selectors">
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
