--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <center>
-<div class="result"></div>
+<div class="result-container">
+  <span class="result">Result appears here :)</span>
+</div>
 <input type="text" class="Pokemon">
 <br>
 <center>
