--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <center>
 <div class="result-container">
   <span class="result">Pokemon</span></span>
+
 </div>
 <input type="text" class="Pokemon">
 <br>
@@ -267,7 +268,27 @@ Cats
         </select>
         </center>
     </div>
-   
+       
+    <div class="panel">
+        <fieldset class="poke-info" id="p1">
+            <legend align="center">Pokemon 1</legend>
+            <input type="text" class="set-selector calc-trigger" />
+            <div class="info-group">
+                <div>
+                    <label>Type</label>
+                    <select class="type1 calc-trigger"></select>
+                    <select class="type2 calc-trigger"></select>
+                </div>
+                <div>
+                    <label>Level</label>
+                    <input class="level calc-trigger" value="100" />
+                </div>
+                <div class="hide">
+                    <label>Weight (kg)</label>
+                    <input class="weight calc-trigger" value="10.0" />
+                </div>
+            </div>
+
 </div>
 </body>
 </html>
