--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <center>
 <div class="result-container">
+        <label>Pokemon</label>
   <span class="result">Pokemon</span></span>
 
 </div>
