--- a/index.html
+++ b/index.html
@@ -8,8 +8,45 @@
 </head>
 <body>
 <center>
-<div class="result-container">
-  <span class="result">Pokemon</span></span>
+ <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Pokemon</label>
+        <select class="item calc-trigger">
+            <option value="">(none)</option>
+            <option value="Abomasnow">Abomasnow</option>
+            <option value="Abra">Abra</option>
+            <option value="Absol">Absol</option>
+            <option value="Accelgor">Accelgor</option>
+            <option value="Aegislash">Aegislash</option>
+            <option value="Aerodactyl">Aerodactyl</option>
+            <option value="Aggron">Aggron</option>
+            <option value="Aipom">Aipom</option>
+            <option value="Alakazam">Alakazam</option>
+            <option value="Alomomola">Alomomola</option>
+            <option value="Altaria">Altaria</option>
+            <option value="Amaura">Amaura</option>
+            <option value="Ambipom">Ambipom</option>
+            <option value="Amoonguss">Amoonguss</option>
+            <option value="Ampharos">Ampharos</option>
+            <option value="Anorith">Anorith</option>
+            <option value="Arbok">Arbok</option>
+            <option value="Arcanine">Arcanine</option>
+            <option value="Arceus">Arceus</option>
+            <option value="Archen">Archen</option>
+            <option value="Archeops">Archeops</option>
+            <option value="Ariados">Ariados</option>
+            <option value="Armaldo">Armaldo</option>
+            <option value="Aromatisse">Aromatisse</option>
+            <option value="Aron">Aron</option>
+            <option value="Articuno">Articuno</option>
+            <option value="Audino">Audino</option>
+            <option value="Aurorus">Aurorus</option>
+            <option value="Avalugg">Avalugg</option>
+            <option value="Axew">Axew</option>
+            <option value="Azelf">Azelf</option>
+            <option value="Azumarill">Azumarill</option>
+            <option value="Azurill">Azurill</option>
+        </select>
+    </div>
 </div>
 </center>
  <div class="gen-specific g2 g3 g4 g5 g6">
