--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <center>
  <div class="gen-specific g2 g3 g4 g5 g6">
         <label>Pokemon</label>
-        <select class="item calc-trigger">
+        <select class="Pokemon calc-trigger">
             <option value="">(none)</option>
             <option value="Abomasnow">Abomasnow</option>
             <option value="Abra">Abra</option>
