--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
         </select>
     </div>
 </div>
-</center>
+ <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Gender</label>
+        <select class="gender calc-trigger">
+            <option value="">(none)</option>
+            <option value="Male">Male</option>
+            <option value="Female">Female</option>
+        </select>
+    </div>
  <div class="gen-specific g2 g3 g4 g5 g6">
         <label>Item</label>
         <select class="item calc-trigger">
