--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <option value="Female">Female</option>
         </select>
     </div>
+    </center>
  <div class="gen-specific g2 g3 g4 g5 g6">
         <label>Item</label>
         <select class="item calc-trigger">
