--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             <option value="Female">Female</option>
         </select>
     </div>
-    </center>
  <div class="gen-specific g2 g3 g4 g5 g6">
         <label>Item</label>
         <select class="item calc-trigger">
@@ -304,6 +303,46 @@
             <option value="White Smoke">White Smoke</option>
             <option value="Wonder Guard">Wonder Guard</option>
         </select>
+         <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Move 1</label>
+        <select class="move 1 calc-trigger">
+            <option value="">(none)</option>
+            <option value="Absorb">Absorb</option>
+            <option value="Acid">Acid</option>
+            <option value="Acid Armor">Acid Armor</option>
+            <option value="Acid Spray">Acid Spray</option>
+        </select>
+    </div>
+     <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Move 2</label>
+        <select class="move 2 calc-trigger">
+            <option value="">(none)</option>
+            <option value="Absorb">Absorb</option>
+            <option value="Acid">Acid</option>
+            <option value="Acid Armor">Acid Armor</option>
+            <option value="Acid Spray">Acid Spray</option>
+        </select>
+    </div>
+     <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Move 3</label>
+        <select class="move 3 calc-trigger">
+            <option value="">(none)</option>
+            <option value="Absorb">Absorb</option>
+            <option value="Acid">Acid</option>
+            <option value="Acid Armor">Acid Armor</option>
+            <option value="Acid Spray">Acid Spray</option>
+        </select>
+    </div>
+     <div class="gen-specific g2 g3 g4 g5 g6">
+        <label>Move 4</label>
+        <select class="move 4 calc-trigger">
+            <option value="">(none)</option>
+            <option value="Absorb">Absorb</option>
+            <option value="Acid">Acid</option>
+            <option value="Acid Armor">Acid Armor</option>
+            <option value="Acid Spray">Acid Spray</option>
+        </select>
+    </div>
         </center>
     </div>
 </div>
