--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </center>
     </div>
 </div>
-<button class="go"></button>
+<button class="go">Go!</button>
 <div class="result"></div>
 </body>
 </html>
