--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 </div>
 <center>
   <button class="go">Go!</button>
-  <div class="result"></div>
+  <div class="result-container"></div>
   </center>
 </body>
 </html>
