--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
         <select class="nature calc-trigger">
+            <option value="">(none)</option>
             <option value="Adamant">Adamant</option>
             <option value="Bashful">Bashful</option>
             <option value="Bold">Bold</option>
