--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <option value="Careful">Careful</option>
             <option value="Docile">Docile</option>
             <option value="Gentle">Gentle</option>
-            <option value="Hardy" selected="selected">Hardy</option>
+            <option value="Hardy">Hardy</option>
             <option value="Hasty">Hasty</option>
             <option value="Impish">Impish</option>
             <option value="Jolly">Jolly</option>
