--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>MunnaSearch</title>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="script.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <center>
