--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             <option value="Adamant Orb">Adamant Orb</option>
             <option value="Air Balloon">Air Balloon</option>
             <option value="Apicot Berry">Apicot Berry</option>
-            <option value="Assault Vest">Assault Vest</option>
             <option value="Babiri Berry">Babiri Berry</option>
             <option value="Belue Berry">Belue Berry</option>
             <option value="Berry Juice">Berry Juice</option>
@@ -81,7 +80,6 @@
             <option value="Chople Berry">Chople Berry</option>
             <option value="Coba Berry">Coba Berry</option>
             <option value="Colbur Berry">Colbur Berry</option>
-            <option value="Custap Berry">Custap Berry</option>
             <option value="Deep Sea Scale">Deep Sea Scale</option>
             <option value="Deep Sea Tooth">Deep Sea Tooth</option>
             <option value="Draco Plate">Draco Plate</option>
@@ -89,7 +87,6 @@
             <option value="Dread Plate">Dread Plate</option>
             <option value="Durin Berry">Durin Berry</option>
             <option value="Earth Plate">Earth Plate</option>
-            <option value="Enigma Berry">Enigma Berry</option>
             <option value="Eviolite">Eviolite</option>
             <option value="Expert Belt">Expert Belt</option>
             <option value="Fist Plate">Fist Plate</option>
@@ -103,13 +100,10 @@
             <option value="Insect Plate">Insect Plate</option>
             <option value="Iron Ball">Iron Ball</option>
             <option value="Iron Plate">Iron Plate</option>
-            <option value="Jaboca Berry">Jaboca Berry</option>
             <option value="Kasib Berry">Kasib Berry</option>
             <option value="Kebia Berry">Kebia Berry</option>
-            <option value="Kee Berry">Kee Berry</option>
             <option value="King's Rock">King's Rock</option>
             <option value="Lagging Tail">Lagging Tail</option>
-            <option value="Lansat Berry">Lansat Berry</option>
             <option value="Leftovers">Leftovers</option>
             <option value="Leppa Berry">Leppa Berry</option>
             <option value="Liechi Berry">Liechi Berry</option>
@@ -119,33 +113,26 @@
             <option value="Lustrous Orb">Lustrous Orb</option>
             <option value="Macho Brace">Macho Brace</option>
             <option value="Magnet">Magnet</option>
-            <option value="Maranga Berry">Maranga Berry</option>
             <option value="Meadow Plate">Meadow Plate</option>
             <option value="Metal Coat">Metal Coat</option>
             <option value="Metal Powder">Metal Powder</option>
-            <option value="Micle Berry">Micle Berry</option>
             <option value="Mind Plate">Mind Plate</option>
             <option value="Miracle Seed">Miracle Seed</option>
             <option value="Muscle Band">Muscle Band</option>
             <option value="Mystic Water">Mystic Water</option>
             <option value="Never-Melt Ice">Never-Melt Ice</option>
-            <option value="Normal Gem">Normal Gem</option>
             <option value="Occa Berry">Occa Berry</option>
             <option value="Odd Incense">Odd Incense</option>
             <option value="Oran Berry">Oran Berry</option>
             <option value="Passho Berry">Passho Berry</option>
             <option value="Payapa Berry">Payapa Berry</option>
-            <option value="Petaya Berry">Petaya Berry</option>
-            <option value="Pixie Plate">Pixie Plate</option>
             <option value="Poison Barb">Poison Barb</option>
             <option value="Rawst Berry">Rawst Berry</option>
             <option value="Razor Fang">Razor Fang</option>
             <option value="Rindo Berry">Rindo Berry</option>
             <option value="Rock Incense">Rock Incense</option>
+            <option value="Rocky Helmet">Rocky Helmet</option>
             <option value="Rose Incense">Rose Incense</option>
-            <option value="Roseli Berry">Roseli Berry</option>
-            <option value="Rowap Berry">Rowap Berry</option>
-            <option value="Safety Goggles">Safety Goggles</option>
             <option value="Salac Berry">Salac Berry</option>
             <option value="Sea Incense">Sea Incense</option>
             <option value="Sharp Beak">Sharp Beak</option>
@@ -158,7 +145,6 @@
             <option value="Spell Tag">Spell Tag</option>
             <option value="Splash Plate">Splash Plate</option>
             <option value="Spooky Plate">Spooky Plate</option>
-            <option value="Starf Berry">Starf Berry</option>
             <option value="Stick">Stick</option>
             <option value="Stone Plate">Stone Plate</option>
             <option value="Tanga Berry">Tanga Berry</option>
