--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
             <option value="Passho Berry">Passho Berry</option>
             <option value="Payapa Berry">Payapa Berry</option>
             <option value="Poison Barb">Poison Barb</option>
+            <option value="Power Anklet">Power Anklet</option>
+            <option value="Power Band">Power Band</option>
+            <option value="Power Belt">Power Belt</option>
+            <option value="Power Bracer">Power Bracer</option>
+            <option value="Power Lens">Power Lens</option>
+            <option value="Power Weight">Power Weight</option>
             <option value="Rawst Berry">Rawst Berry</option>
             <option value="Razor Fang">Razor Fang</option>
             <option value="Rindo Berry">Rindo Berry</option>
