--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <option value="Aurorus">Aurorus</option>
 <option value="Avalugg">Avalugg</option>
 <option value="Axew">Axew</option>
-<option value="Azelf">Azelf</option>
+<option value="Adelf">Azelf</option>
 <option value="Azumarill">Azumarill</option>
 <option value="Azurill">Azurill</option>
 <option value="Bagon">Bagon</option>
@@ -770,7 +770,7 @@
 <option value="Vullaby">Vullaby</option>
 <option value="Vulpix">Vulpix</option>
 <option value="Wailmer">Wailmer</option>
-<option value="Wailord">Wailord</option>
+<option value="Chin's Mom">Wailord</option>
 <option value="Walrein">Walrein</option>
 <option value="Wartortle">Wartortle</option>
 <option value="Watchog">Watchog</option>
