--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <label>Pokemon</label>
     <select class="Pokemon calc-trigger">
 <option value="your mom">(none)</option>
-     <option value="Abomasnow">Abomasnow</option>
+<option value="Abomasnow">Abomasnow</option>
 <option value="Abra">Abra</option>
 <option value="Absol">Absol</option>
 <option value="Accelgor">Accelgor</option>
@@ -375,7 +375,7 @@
 <option value="Lapras">Lapras</option>
 <option value="Larvesta">Larvesta</option>
 <option value="Larvitar">Larvitar</option>
-<option value="Latias">Latias</option>
+<option value="Dat Ass">Latias</option>
 <option value="Latios">Latios</option>
 <option value="Leafeon">Leafeon</option>
 <option value="Leavanny">Leavanny</option>
@@ -505,7 +505,7 @@
 <option value="Noctowl">Noctowl</option>
 <option value="Noibat">Noibat</option>
 <option value="Noivern">Noivern</option>
-<option value="Nosepass">Nosepass</option>
+<option value="Hazeel">Nosepass</option>
 <option value="Numel">Numel</option>
 <option value="Nuzleaf">Nuzleaf</option>
 <option value="Octillery">Octillery</option>
@@ -634,7 +634,7 @@
 <option value="Shellos">Shellos</option>
 <option value="Shelmet">Shelmet</option>
 <option value="Shieldon">Shieldon</option>
-<option value="Shiftry">Shiftry</option>
+<option value="Deez Nutz">Shiftry</option>
 <option value="Shinx">Shinx</option>
 <option value="Shroomish">Shroomish</option>
 <option value="Shuckle">Shuckle</option>
