--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 <option value="Purugly">Purugly</option>
 <option value="Pyroar">Pyroar</option>
 <option value="Quagsire">Quagsire</option>
-<option value="Quilava">Quilava</option>
+<option value="Nickoopa">Quilava</option>
 <option value="Quilladin">Quilladin</option>
 <option value="Qwilfish">Qwilfish</option>
 <option value="Raichu">Raichu</option>
