--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 <option value="Onix">Onix</option>
 <option value="Oshawott">Oshawott</option>
 <option value="Pachirisu">Pachirisu</option>
-<option value="Palkia">Palkia</option>
+<option value="Parukia">Palkia</option>
 <option value="Palpitoad">Palpitoad</option>
 <option value="Pancham">Pancham</option>
 <option value="Pangoro">Pangoro</option>
