--- a/index.html
+++ b/index.html
@@ -929,6 +929,12 @@
         </select>
     </div>
   <div class="info-group info-selectors">
+    <input type="text" placeholder="HP" class="evs">
+    <input type="text" placeholder="Atk" class="evs">
+    <input type="text" placeholder="Def" class="evs">
+    <input type="text" placeholder="Sp.Atk" class="evs">
+    <input type="text" placeholder="Sp.Def" class="evs">
+    <input type="text" placeholder="Spe" class="evs">
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
         <select class="nature calc-trigger">
