--- a/index.html
+++ b/index.html
@@ -929,6 +929,7 @@
         </select>
     </div>
   <div class="info-group info-selectors">
+  <label>EVs</label>
     <input type="text" placeholder="HP" class="evs">
     <input type="text" placeholder="Atk" class="evs">
     <input type="text" placeholder="Def" class="evs">
