--- a/index.html
+++ b/index.html
@@ -930,12 +930,12 @@
     </div>
   <div class="info-group info-selectors">
   <label>EVs</label>
-    <input type="text" placeholder="HP" class="evs">
-    <input type="text" placeholder="Atk" class="evs">
-    <input type="text" placeholder="Def" class="evs">
-    <input type="text" placeholder="Sp.Atk" class="evs">
-    <input type="text" placeholder="Sp.Def" class="evs">
-    <input type="text" placeholder="Spe" class="evs">
+    <input type="text" placeholder="HP" class="evs hp">
+    <input type="text" placeholder="Atk" class="evs atk">
+    <input type="text" placeholder="Def" class="evs def">
+    <input type="text" placeholder="Sp.Atk" class="evs spatk">
+    <input type="text" placeholder="Sp.Def" class="evs spdef">
+    <input type="text" placeholder="Spe" class="evs spe">
     <div class="gen-specific g3 g4 g5 g6">
         <label>Nature</label>
         <select class="nature calc-trigger">
