--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <label>Pokemon</label>
     <select class="Pokemon calc-trigger">
 <option value="your mom">(none)</option>
-<option value="Abomasnow">Abomasnow><img src="http://i.imgflip.com/26am.jpg" /></option>
+<option value="Abomasnow">Abomasnow</option>
 <option value="Abra">Abra</option>
 <option value="Absol">Absol</option>
 <option value="Accelgor">Accelgor</option>
