--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  <div class="gen-specific g2 g3 g4 g5 g6">
   <label>Pokemon</label>
     <select class="Pokemon calc-trigger">
-<option value="your mom">(none)</option>
+<option value="penis">(none)</option>
 <option value="Abomasnow">Abomasnow</option>
 <option value="Abra">Abra</option>
 <option value="Absol">Absol</option>
