--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <option value="Arceus-Rock">Arceus-Rock</option>
 <option value="Arceus-Steel">Arceus-Steel</option>
 <option value="Arceus-Water">Arceus-Water</option>
-<option value="Arceus">Arceus</option>
+<option value="God">Arceus</option>
 <option value="Archen">Archen</option>
 <option value="Archeops">Archeops</option>
 <option value="Ariados">Ariados</option>
@@ -83,7 +83,7 @@
 <option value="Bibarel">Bibarel</option>
 <option value="Bidoof">Bidoof</option>
 <option value="Binacle">Binacle</option>
-<option value="Bisharp">Bisharp</option>
+<option value="Bishie">Bisharp</option>
 <option value="Blastoise">Blastoise</option>
 <option value="Blaziken">Blaziken</option>
 <option value="Blissey">Blissey</option>
@@ -341,7 +341,7 @@
 <option value="Jolteon">Jolteon</option>
 <option value="Joltik">Joltik</option>
 <option value="Jumpluff">Jumpluff</option>
-<option value="Jynx">Jynx</option>
+<option value="Nicki Minaj">Jynx</option>
 <option value="Kabuto">Kabuto</option>
 <option value="Kabutops">Kabutops</option>
 <option value="Kadabra">Kadabra</option>
@@ -391,7 +391,7 @@
 <option value="Litleo">Litleo</option>
 <option value="Litwick">Litwick</option>
 <option value="Lombre">Lombre</option>
-<option value="Lopunny">Lopunny</option>
+<option value="Playboy Bunny">Lopunny</option>
 <option value="Lotad">Lotad</option>
 <option value="Loudred">Loudred</option>
 <option value="Lucario">Lucario</option>
@@ -476,7 +476,7 @@
 <option value="Mienshao">Mienshao</option>
 <option value="Mightyena">Mightyena</option>
 <option value="Milotic">Milotic</option>
-<option value="Miltank">Miltank</option>
+<option value="Bitch">Miltank</option>
 <option value="Mime Jr.">Mime Jr.</option>
 <option value="Minccino">Minccino</option>
 <option value="Minun">Minun</option>
@@ -505,7 +505,7 @@
 <option value="Noctowl">Noctowl</option>
 <option value="Noibat">Noibat</option>
 <option value="Noivern">Noivern</option>
-<option value="Hazeel">Nosepass</option>
+<option value="Hazeel's Love">Nosepass</option>
 <option value="Numel">Numel</option>
 <option value="Nuzleaf">Nuzleaf</option>
 <option value="Octillery">Octillery</option>
@@ -531,7 +531,7 @@
 <option value="Petilil">Petilil</option>
 <option value="Phanpy">Phanpy</option>
 <option value="Phantump">Phantump</option>
-<option value="Phione">Phione</option>
+<option value="iPhone">Phione</option>
 <option value="Pichu">Pichu</option>
 <option value="Pidgeot">Pidgeot</option>
 <option value="Pidgeotto">Pidgeotto</option>
