--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
 <option value="Mienshao">Mienshao</option>
 <option value="Mightyena">Mightyena</option>
 <option value="Milotic">Milotic</option>
-<option value="Bitch">Miltank</option>
+<option value="Miltank">Miltank</option>
 <option value="Mime Jr.">Mime Jr.</option>
 <option value="Minccino">Minccino</option>
 <option value="Minun">Minun</option>
