--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <option value="Aurorus">Aurorus</option>
 <option value="Avalugg">Avalugg</option>
 <option value="Axew">Axew</option>
-<option value="Adelf">Azelf</option>
+<option value="Azelf">Azelf</option>
 <option value="Azumarill">Azumarill</option>
 <option value="Azurill">Azurill</option>
 <option value="Bagon">Bagon</option>
